--- a/contact.html
+++ b/contact.html
@@ -121,13 +121,17 @@
   </style>
 </head>
 <body>
-  <h1>Gallery</h1>
+  <h1>Contacts</h1>
 
   <div class="grid">
     <!-- Просто добавляй блоки с нужными файлами -->
-    <div class="grid-item" data-type="image" data-src="1.jpg"><img src="1.jpg" alt=""></div>
-    <div class="grid-item" data-type="video" data-src="1.mp4"><video src="1.mp4" muted></video></div>
-    <div class="grid-item" data-type="video" data-src="2.mp4"><video src="2.mp4" muted></video></div>
+    <div class="grid-item" data-type="image" data-src="1.jpg"><img src="instagram.jpg" alt=""></div>
+	https://www.instagram.com/7sunshine8?utm_source=qr&igsh=bDI1dHkwenJtcDY5
+    <div class="grid-item" data-type="image" data-src="2.jpg"><img src="line.jpg" alt=""></div>
+	https://line.me/ti/p/Z98vMmhwl-
+    <div class="grid-item" data-type="image" data-src="2.jpg"><img src="watsapp.jpg" alt=""></div>
+	https://wa.me/qr/GIOBZKEOQOSPC1
+
   </div>
 
   <a href="index.html" class="back">← Back to main</a>
