--- a/gallery — копия.html
+++ b/gallery — копия.html
@@ -126,6 +126,7 @@
   <div class="grid">
     <!-- Просто добавляй блоки с нужными файлами -->
     <div class="grid-item" data-type="image" data-src="1.jpg"><img src="1.jpg" alt=""></div>
+    <div class="grid-item" data-type="image" data-src="2.jpg"><img src="2.jpg" alt=""></div>
     <div class="grid-item" data-type="video" data-src="1.mp4"><video src="1.mp4" muted></video></div>
     <div class="grid-item" data-type="video" data-src="2.mp4"><video src="2.mp4" muted></video></div>
   </div>
