--- a/index.html
+++ b/index.html
@@ -5,128 +5,91 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SunDarknessShine – Official Art Site</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Segoe UI", sans-serif;
+    *{margin:0;padding:0;box-sizing:border-box;font-family:"Segoe UI",sans-serif;}
+    body{
+      background:url("background.jpg") no-repeat center center fixed;
+      background-size:cover;
+      height:100vh;
+      color:#fff;
+      display:flex;
+      flex-direction:column;
+      justify-content:flex-end;
+      align-items:center;
+      position:relative;
+      overflow:hidden;
+      padding-bottom:10vh;
+    }
+    body::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:rgba(0,0,0,0.45);
+      z-index:0;
+    }
+    .content{position:relative;z-index:1;text-align:center;padding:1rem;}
+    
+    /* Заголовок — глубокий фиолетовый + чёрная обводка */
+    h1{
+      font-size:3.2rem;
+      margin-bottom:0.5rem;
+      letter-spacing:2px;
+      color:#4B0082; /* очень насыщенный тёмно-фиолетовый (индиго/куроми глубокий) */
+      text-shadow:
+        1px 1px 2px #000,
+        -1px -1px 2px #000,
+        0 0 25px rgba(75,0,130,0.7);
+      font-style:normal;
     }
 
-    body {
-      background: url("background.jpg") no-repeat center center fixed;
-      background-size: cover;
-      height: 100vh;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: center;
-      text-shadow: 0 0 10px rgba(0,0,0,0.7);
-      position: relative;
-      overflow: hidden;
-      padding-bottom: 10vh;
+    /* Подпись — курсив, без рамки */
+    p{
+      font-size:1.4rem;
+      margin-bottom:2rem;
+      color:#e0e0e0;
+      font-style:italic;
+      text-shadow:0 0 10px rgba(0,0,0,0.6);
     }
 
-    body::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.45);
-      z-index: 0;
+    .buttons{display:flex;gap:1rem;flex-wrap:wrap;justify-content:center;}
+    .btn{
+      padding:0.7rem 1.4rem;
+      border:1px solid #000;
+      border-radius:25px;
+      color:#fff;
+      text-decoration:none;
+      transition:all 0.3s ease;
+      background:rgba(0,0,0,0.4);
+    }
+    .btn:hover{
+      background:#4B0082;
+      color:#fff;
+      border-color:#4B0082;
     }
 
-    .content {
-      position: relative;
-      z-index: 1;
-      text-align: center;
-      padding: 1rem;
+    .lang-switch{
+      position:absolute;
+      top:1.5rem;
+      right:1.5rem;
+      display:flex;
+      gap:0.5rem;
+      z-index:2;
     }
-
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-      letter-spacing: 2px;
-      color: #FFD700;
-      text-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
+    .lang-switch button{
+      background:rgba(255,255,255,0.1);
+      border:1px solid #ccc;
+      color:#fff;
+      border-radius:5px;
+      padding:0.3rem 0.6rem;
+      cursor:pointer;
+      transition:background 0.3s;
     }
-
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-      color: #e0e0e0;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .btn {
-      padding: 0.7rem 1.4rem;
-      border: 1px solid #000;
-      border-radius: 25px;
-      color: #fff;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      background: rgba(0, 0, 0, 0.4);
-    }
-
-    .btn:hover {
-      background: #FFD700;
-      color: #111;
-      border-color: #FFD700;
-    }
-
-    .lang-switch {
-      position: absolute;
-      top: 1.5rem;
-      right: 1.5rem;
-      display: flex;
-      gap: 0.5rem;
-      z-index: 2;
-    }
-
-    .lang-switch button {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid #ccc;
-      color: #fff;
-      border-radius: 5px;
-      padding: 0.3rem 0.6rem;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .lang-switch button:hover {
-      background: rgba(255,255,255,0.3);
-    }
-
-    footer {
-      position: absolute;
-      bottom: 1rem;
-      font-size: 0.9rem;
-      color: #ccc;
-      z-index: 1;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-      p {
-        font-size: 1rem;
-      }
-      .btn {
-        padding: 0.5rem 1rem;
-      }
-    }
+    .lang-switch button:hover{background:rgba(255,255,255,0.3);}
+    footer{position:absolute;bottom:1rem;font-size:0.9rem;color:#ccc;z-index:1;}
+    @media(max-width:600px){h1{font-size:2rem;}p{font-size:1.1rem;}}
   </style>
 </head>
 <body>
-  <!-- переключатель языков -->
   <div class="lang-switch">
-    <button onclick="location.href='index.html'">EN</button>
     <button onclick="location.href='index_ru.html'">RU</button>
     <button onclick="location.href='index_jp.html'">JP</button>
   </div>
