--- a/index.html
+++ b/index.html
@@ -72,21 +72,20 @@
       justify-content: center;
     }
 
-    /* Кнопки — теперь с чёрным текстом */
+    /* Кнопки прежнего цвета, но с чёрным текстом */
     .btn {
       padding: 0.7rem 1.4rem;
       border: 1px solid #000;
       border-radius: 25px;
-      color: #000; /* чёрный текст */
+      color: #000; /* ← чёрный текст */
       text-decoration: none;
       transition: all 0.3s ease;
-      background: rgba(255, 255, 255, 0.8); /* светлый фон */
-      font-weight: 500;
+      background: rgba(0, 0, 0, 0.4); /* ← как раньше, тёмный фон */
     }
 
     .btn:hover {
       background: #7A2E8E;
-      color: #fff; /* белый текст при наведении */
+      color: #fff;
       border-color: #7A2E8E;
     }
 
