--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
       justify-content: center;
     }
 
-    /* Кнопки — светло-серые, полупрозрачные */
+    /* Тёмные кнопки, но текст светло-фиолетовый */
     .btn {
       padding: 0.7rem 1.4rem;
       border: 1px solid #000;
       border-radius: 25px;
-      color: #000; /* чёрный текст */
+      color: #D6A8F1; /* светло-фиолетовый текст */
       text-decoration: none;
       transition: all 0.3s ease;
-      background: rgba(200, 200, 200, 0.4); /* светло-серая прозрачная кнопка */
+      background: rgba(0, 0, 0, 0.4); /* тёмная кнопка */
     }
 
     .btn:hover {
