--- a/about_jp.html
+++ b/about_jp.html
@@ -4,68 +4,148 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>情報 – SunDarknessShine</title>
+
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: "Segoe UI", sans-serif;
-      background: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+    }
+
+    body {
+      background: #000 url("background2.jpg") no-repeat center top;
+      background-size: cover;
+      color: #D6A8F1;
       text-align: center;
-      padding: 2rem;
+      padding: 2rem 1rem 3rem;
     }
-    p {
-      max-width: 700px;
-      line-height: 1.6;
-      font-size: 1.1rem;
-      color: #e0e0e0;
-      margin-bottom: 3rem;
-    }
+
     .lang-switch {
       position: absolute;
       top: 1.5rem;
       right: 1.5rem;
       display: flex;
       gap: 0.5rem;
+      z-index: 5;
     }
+
     .lang-switch button {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid #ccc;
-      color: #fff;
-      border-radius: 5px;
-      padding: 0.3rem 0.6rem;
+      background: rgba(0,0,0,0.6);
+      border: 1px solid rgba(255,255,255,0.7);
+      color: white;
+      border-radius: 6px;
+      padding: 0.4rem 0.8rem;
       cursor: pointer;
-      transition: background 0.3s;
     }
-    .lang-switch button:hover { background: rgba(255,255,255,0.3); }
-    a.back {
-      color: #aaa;
-      border: 1px solid rgba(255,255,255,0.2);
-      padding: 8px 14px;
-      border-radius: 8px;
+
+    .content {
+      max-width: 1100px;
+      margin: 5rem auto 0;
+    }
+
+    h1 {
+      font-size: 2.4rem;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      margin-bottom: 2rem;
+      color: #7A2E8E;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000,
+         0 0 25px rgba(122,46,142,0.7);
+    }
+
+    p {
+      font-size: 1.6rem;
+      line-height: 1.9;
+      margin-bottom: 1.4rem;
+      color: #D6A8F1;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000,
+         0 0 18px rgba(0,0,0,0.9);
+    }
+
+    a {
+      color: #FFD700;
       text-decoration: none;
-      transition: all 0.3s;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000;
     }
-    a.back:hover {
-      background: #FFD700;
-      color: #111;
-      border-color: #FFD700;
+
+    a:hover {
+      color: white;
+      text-decoration: underline;
+    }
+
+    .back {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 10px 16px;
+      border-radius: 8px;
+      border: 1px solid rgba(255,255,255,0.6);
+      color: #FFD700;
+      text-decoration: none;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000;
+    }
+
+    .back:hover {
+      background: #7A2E8E;
+      border-color: #7A2E8E;
+      color: white;
+    }
+
+    @media(max-width: 600px) {
+      h1 { font-size: 1.9rem; }
+      p { font-size: 1.2rem; }
     }
   </style>
 </head>
+
 <body>
-  <div class="lang-switch">
-    <button onclick="location.href='about.html'">EN</button>
-    <button onclick="location.href='about_ru.html'">RU</button>
-  </div>
 
-  <p>各作品は個別に制作され、作家による独自の限定モデルです。  
-  作者は自身の作品の公開権を保有しています。</p>
+<div class="lang-switch">
+  <button onclick="location.href='about.html'">EN</button>
+  <button onclick="location.href='about_ru.html'">RU</button>
+</div>
 
-  <a href="index_jp.html" class="back">← メインへ戻る</a>
+<div class="content">
+
+  <h1>SunDarknessShine</h1>
+
+  <p>すべての作品は一点ずつ制作されるオーダーメイドであり、世界に一つだけのオリジナルモデルです。作者は自身の作品の掲載・公開に関する権利を保持しています。</p>
+
+  <p>デザインは半永久的で、洗濯しても色落ちせず、ひび割れず、退色しません。衣類として通常の洗濯機洗いが可能です（一般的なお手入れ表示に従ってください）。</p>
+
+  <p>制作期間の目安は、オーダーの混雑状況にもよりますが、通常2〜5日ほどです。</p>
+
+  <p>
+    もし
+    <a href="gallery_jp.html">ギャラリー</a>
+    に掲載されているモデルを気に入っていただけた場合は、
+    その作品を購入することも、
+    テーマに合わせたカスタムオーダーを依頼することも可能です。
+    ご希望の方は、
+    <a href="contact_jp.html">コンタクト</a>
+    よりアーティストまでご連絡ください。
+  </p>
+
+  <p>オリジナルペイント入り作品の目安価格は、地域やデザインの複雑さにより異なりますが、おおよそ50,000円または500ユーロからとなります。</p>
+
+  <a href="index_jp.html" class="back">← トップページに戻る</a>
+
+</div>
+
 </body>
 </html>
