--- a/about_ru.html
+++ b/about_ru.html
@@ -4,68 +4,148 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Информация – SunDarknessShine</title>
+
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: "Segoe UI", sans-serif;
-      background: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+    }
+
+    body {
+      background: #000 url("background2.jpg") no-repeat center center;
+      background-size: cover;
+      color: #D6A8F1;
       text-align: center;
-      padding: 2rem;
+      padding: 2rem 1rem 3rem;
     }
-    p {
-      max-width: 700px;
-      line-height: 1.6;
-      font-size: 1.1rem;
-      color: #e0e0e0;
-      margin-bottom: 3rem;
-    }
+
+    /* язык */
     .lang-switch {
       position: absolute;
       top: 1.5rem;
       right: 1.5rem;
       display: flex;
       gap: 0.5rem;
+      z-index: 5;
     }
+
     .lang-switch button {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid #ccc;
-      color: #fff;
-      border-radius: 5px;
-      padding: 0.3rem 0.6rem;
+      background: rgba(0,0,0,0.6);
+      border: 1px solid rgba(255,255,255,0.7);
+      color: white;
+      border-radius: 6px;
+      padding: 0.4rem 0.8rem;
       cursor: pointer;
-      transition: background 0.3s;
     }
-    .lang-switch button:hover { background: rgba(255,255,255,0.3); }
-    a.back {
-      color: #aaa;
-      border: 1px solid rgba(255,255,255,0.2);
-      padding: 8px 14px;
-      border-radius: 8px;
+
+    /* контент БЕЗ контейнеров */
+    .content {
+      max-width: 1100px;
+      margin: 5rem auto 0;
+    }
+
+    h1 {
+      font-size: 2.4rem;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      margin-bottom: 2rem;
+      color: #7A2E8E;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000,
+         0 0 25px rgba(122,46,142,0.7);
+    }
+
+    p {
+      font-size: 1.6rem;
+      line-height: 1.9;
+      margin-bottom: 1.4rem;
+      color: #D6A8F1;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000,
+         0 0 18px rgba(0,0,0,0.9);
+    }
+
+    a {
+      color: #FFD700;
       text-decoration: none;
-      transition: all 0.3s;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000;
     }
-    a.back:hover {
-      background: #FFD700;
-      color: #111;
-      border-color: #FFD700;
+
+    a:hover {
+      color: white;
+      text-decoration: underline;
+    }
+
+    .back {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 10px 16px;
+      border-radius: 8px;
+      border: 1px solid rgba(255,255,255,0.6);
+      color: #FFD700;
+      text-decoration: none;
+      text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000;
+    }
+
+    .back:hover {
+      background: #7A2E8E;
+      border-color: #7A2E8E;
+      color: white;
+    }
+
+    @media(max-width: 600px) {
+      h1 { font-size: 1.9rem; }
+      p { font-size: 1.2rem; }
     }
   </style>
 </head>
-<body>
-  <div class="lang-switch">
-    <button onclick="location.href='about.html'">EN</button>
-    <button onclick="location.href='about_jp.html'">JP</button>
-  </div>
 
-  <p>Каждая работа изготавливается индивидуально и создаётся авторская эксклюзивная модель.  
-  Автору принадлежат права на публикацию своих работ.</p>
+<body>
+
+<div class="lang-switch">
+  <button onclick="location.href='about.html'">EN</button>
+  <button onclick="location.href='about_jp.html'">JP</button>
+</div>
+
+<div class="content">
+
+  <h1>Sundarknessshine</h1>
+
+  <p>Каждая работа изготавливается индивидуально и создаётся авторская эксклюзивная модель в единственном экземпляре. Автор сохраняет права на публикацию своих работ.</p>
+
+  <p>Изображение перманентно: не стирается, не трескается и не выцветает. Изделие можно стирать в машинной стирке, соблюдая обычные рекомендации по уходу за одеждой.</p>
+
+  <p>Обычно работа над заказом занимает от 2 до 5 дней при отсутствии очереди.</p>
+
+  <p>
+    Если вам понравилась модель из
+    <a href="gallery_ru.html">галереи</a>,
+    вы можете приобрести одну из представленных работ
+    или оформить персональный заказ —
+    свяжитесь с автором через
+    <a href="contact_ru.html">контакты</a>.
+  </p>
+
+  <p>Ориентировочная стоимость изделия с авторской росписью — от 50&nbsp;000&nbsp;¥ или от 500&nbsp;€ (в зависимости от региона и сложности заказа).</p>
 
   <a href="index_ru.html" class="back">← Назад на главную</a>
+
+</div>
+
 </body>
 </html>
