--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
     <!-- LINE -->
     <div class="card">
       <a class="link" href="https://line.me/ti/p/Z98vMmhwl-" target="_blank" rel="noopener noreferrer">
-        LINE: Sunshine
+        LINE: open
       </a>
       <a href="https://line.me/ti/p/Z98vMmhwl-" target="_blank" rel="noopener noreferrer" aria-label="Open Line">
         <img src="line.jpg" alt="LINE QR / barcode">
@@ -140,7 +140,7 @@
     <!-- WhatsApp -->
     <div class="card">
       <a class="link" href="https://wa.me/qr/GIOBZKEOQOSPC1" target="_blank" rel="noopener noreferrer">
-        WhatsApp: Sunshine
+        WhatsApp: open chat
       </a>
       <a href="https://wa.me/qr/GIOBZKEOQOSPC1" target="_blank" rel="noopener noreferrer" aria-label="Open WhatsApp">
         <img src="watsapp.jpg" alt="WhatsApp QR / barcode">
