--- a/gallery.html
+++ b/gallery.html
@@ -202,6 +202,7 @@
         video.src = src;
         video.controls = true;
         video.autoplay = true;
+        video.playsInline = true;
         lightboxContent.appendChild(video);
       }
 
@@ -251,9 +252,14 @@
       } else {
         el = document.createElement('video');
         el.src = src;
+
+        // Превью: только первый кадр, без автоплея
+        el.preload = 'metadata';
         el.muted = true;
-        el.loop = true;
-        el.autoplay = true;
+        el.playsInline = true;
+        el.controls = false;
+        el.autoplay = false;
+        el.loop = false;
       }
 
       item.appendChild(el);
