--- a/index_ru.html
+++ b/index_ru.html
@@ -5,57 +5,122 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SunDarknessShine – Официальный сайт художницы</title>
   <style>
-    *{margin:0;padding:0;box-sizing:border-box;font-family:"Segoe UI",sans-serif;}
-    body{
-      background:url("background.jpg") no-repeat center center fixed;
-      background-size:cover;
-      height:100vh;
-      color:#fff;
-      display:flex;
-      flex-direction:column;
-      justify-content:flex-end;
-      align-items:center;
-      position:relative;
-      overflow:hidden;
-      padding-bottom:10vh;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
     }
-    body::before{content:"";position:absolute;inset:0;background:rgba(0,0,0,0.45);z-index:0;}
-    .content{position:relative;z-index:1;text-align:center;padding:1rem;}
-    h1{
-      font-size:3.2rem;margin-bottom:0.5rem;letter-spacing:2px;
-      color:#7A2E8E;
+
+    body {
+      background: url("background.jpg") no-repeat center center fixed;
+      background-size: cover;
+
+      min-height: 100vh;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: center;
+      position: relative;
+      padding-bottom: 10vh;
+      overflow-x: hidden;
+    }
+
+    .content {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      padding: 1rem;
+    }
+
+    h1 {
+      font-size: 3.2rem;
+      margin-bottom: 0.5rem;
+      letter-spacing: 2px;
+      color: #7A2E8E;
       text-shadow:
         -2px -2px 0 #000,
-        2px -2px 0 #000,
-        -2px 2px 0 #000,
-        2px 2px 0 #000,
-        0 0 25px rgba(122,46,142,0.6);
-      font-style:normal;
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000,
+         0 0 25px rgba(122,46,142,0.6);
+      font-style: normal;
     }
-    p{font-size:1.4rem;margin-bottom:2rem;color:#000;font-style:italic;text-shadow:none;}
-    .buttons{display:flex;gap:1rem;flex-wrap:wrap;justify-content:center;}
-    .btn{
-      padding:0.7rem 1.4rem;
-      border:1px solid #000;
-      border-radius:25px;
-      color:#D6A8F1; /* светло-фиолетовый текст */
-      text-decoration:none;
-      transition:all 0.3s ease;
-      background:rgba(0,0,0,0.4);
+
+    p {
+      font-size: 1.4rem;
+      margin-bottom: 2rem;
+      color: #000;
+      font-style: italic;
+      text-shadow: none;
     }
-    .btn:hover{background:#7A2E8E;color:#fff;border-color:#7A2E8E;}
-    .lang-switch{position:absolute;top:1.5rem;right:1.5rem;display:flex;gap:0.5rem;z-index:2;}
-    .lang-switch button{
-      background:rgba(255,255,255,0.1);
-      border:1px solid #ccc;
-      color:#fff;
-      border-radius:5px;
-      padding:0.3rem 0.6rem;
-      cursor:pointer;
-      transition:background 0.3s;
+
+    .buttons {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      justify-content: center;
     }
-    .lang-switch button:hover{background:rgba(255,255,255,0.3);}
-    footer{position:absolute;bottom:1rem;font-size:0.9rem;color:#ccc;z-index:1;}
+
+    .btn {
+      padding: 0.7rem 1.4rem;
+      border: 1px solid #000;
+      border-radius: 25px;
+      color: #D6A8F1;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      background: rgba(0, 0, 0, 0.4);
+    }
+
+    .btn:hover {
+      background: #7A2E8E;
+      color: #fff;
+      border-color: #7A2E8E;
+    }
+
+    .lang-switch {
+      position: absolute;
+      top: 1.5rem;
+      right: 1.5rem;
+      display: flex;
+      gap: 0.5rem;
+      z-index: 2;
+    }
+
+    .lang-switch button {
+      background: rgba(255,255,255,0.1);
+      border: 1px solid #ccc;
+      color: #fff;
+      border-radius: 5px;
+      padding: 0.3rem 0.6rem;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .lang-switch button:hover {
+      background: rgba(255,255,255,0.3);
+    }
+
+    footer {
+      position: absolute;
+      bottom: 1rem;
+      font-size: 0.9rem;
+      color: #ccc;
+      z-index: 1;
+    }
+
+    @media (max-width: 768px) {
+      body {
+        background-attachment: scroll;
+        background-position: center top;
+        padding-bottom: 8vh;
+      }
+
+      h1 { font-size: 2rem; }
+      p  { font-size: 1.1rem; }
+      .btn { padding: 0.5rem 1rem; }
+    }
   </style>
 </head>
 <body>
@@ -69,7 +134,7 @@
     <p>Официальный сайт художницы</p>
 
     <div class="buttons">
-      <a href="gallery.html" class="btn">Галерея</a>
+      <a href="gallery_ru.html" class="btn">Галерея</a>
       <a href="contact_ru.html" class="btn">Контакты</a>
       <a href="about_ru.html" class="btn">Информация</a>
     </div>
