--- a/about_ru.html
+++ b/about_ru.html
@@ -13,14 +13,14 @@
     }
 
     body {
-      background: #000 url("background2.jpg") no-repeat center center;
+      background: #000 url("background2.jpg") no-repeat center center fixed;
       background-size: cover;
       color: #D6A8F1;
       text-align: center;
       padding: 2rem 1rem 3rem;
+      min-height: 100vh;
     }
 
-    /* язык */
     .lang-switch {
       position: absolute;
       top: 1.5rem;
@@ -39,7 +39,6 @@
       cursor: pointer;
     }
 
-    /* контент БЕЗ контейнеров */
     .content {
       max-width: 1100px;
       margin: 5rem auto 0;
@@ -73,17 +72,12 @@
     }
 
     a {
-      color: #FFD700;
+      color: #FF3EFF;
       text-decoration: none;
-      text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000;
     }
 
     a:hover {
-      color: white;
+      color: #FF7CFF;
       text-decoration: underline;
     }
 
@@ -92,19 +86,14 @@
       margin-top: 1.5rem;
       padding: 10px 16px;
       border-radius: 8px;
-      border: 1px solid rgba(255,255,255,0.6);
-      color: #FFD700;
+      border: 1px solid rgba(255,62,255,0.7);
+      color: #FF3EFF;
       text-decoration: none;
-      text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000;
     }
 
     .back:hover {
-      background: #7A2E8E;
-      border-color: #7A2E8E;
+      background: rgba(255,62,255,0.3);
+      border-color: #FF7CFF;
       color: white;
     }
 
@@ -128,7 +117,7 @@
 
   <p>Каждая работа изготавливается индивидуально и создаётся авторская эксклюзивная модель в единственном экземпляре. Автор сохраняет права на публикацию своих работ.</p>
 
-  <p>Изображение перманентно: не стирается, не трескается и не выцветает. Изделие можно стирать в машинной стирке, соблюдая обычные рекомендации по уходу за одеждой.</p>
+  <p>Изображение перманентно: не стирается, не трескается и не выцветает. Изделие можно стирать в машинной стирке.</p>
 
   <p>Обычно работа над заказом занимает от 2 до 5 дней при отсутствии очереди.</p>
 
@@ -141,7 +130,10 @@
     <a href="contact_ru.html">контакты</a>.
   </p>
 
-  <p>Ориентировочная стоимость изделия с авторской росписью — от 50&nbsp;000&nbsp;¥ или от 500&nbsp;€ (в зависимости от региона и сложности заказа).</p>
+  <p>
+    Ориентировочная стоимость: от 20&nbsp;000&nbsp;¥ — картины, от 30&nbsp;000&nbsp;¥ — одежда  
+    (или от 200&nbsp;€ / 300&nbsp;€, в зависимости от региона и сложности).
+  </p>
 
   <a href="index_ru.html" class="back">← Назад на главную</a>
 
