--- a/about_jp.html
+++ b/about_jp.html
@@ -1,116 +1,91 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>情報 – SunDarknessShine</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>情報 – SunDarknessShine</title>
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: "Segoe UI", sans-serif;
-    }
+<style>
+html, body{margin:0;padding:0;font-family:"Segoe UI",sans-serif;}
+body{
+  background:#000 url("background2.jpg") no-repeat center center fixed;
+  background-size:cover;
+  color:#D6A8F1;
+  text-align:center;
+  padding:2rem 1rem 3rem;
+  min-height:100vh;
+}
 
-    body {
-      background: #000 url("background2.jpg") no-repeat center top;
-      background-size: cover;
-      color: #D6A8F1;
-      text-align: center;
-      padding: 2rem 1rem 3rem;
-    }
+.lang-switch{
+  position:absolute;
+  top:1.5rem;
+  right:1.5rem;
+  display:flex;
+  gap:.5rem;
+}
 
-    .lang-switch {
-      position: absolute;
-      top: 1.5rem;
-      right: 1.5rem;
-      display: flex;
-      gap: 0.5rem;
-      z-index: 5;
-    }
+.lang-switch button{
+  background:rgba(0,0,0,0.6);
+  border:1px solid rgba(255,255,255,0.7);
+  color:white;
+  border-radius:6px;
+  padding:.4rem .8rem;
+  cursor:pointer;
+}
 
-    .lang-switch button {
-      background: rgba(0,0,0,0.6);
-      border: 1px solid rgba(255,255,255,0.7);
-      color: white;
-      border-radius: 6px;
-      padding: 0.4rem 0.8rem;
-      cursor: pointer;
-    }
+.content{max-width:1100px;margin:5rem auto 0;}
 
-    .content {
-      max-width: 1100px;
-      margin: 5rem auto 0;
-    }
+h1{
+  font-size:2.4rem;
+  letter-spacing:2px;
+  text-transform:uppercase;
+  margin-bottom:2rem;
+  color:#7A2E8E;
+  text-shadow:
+   -2px -2px 0 #000,
+    2px -2px 0 #000,
+   -2px  2px 0 #000,
+    2px  2px 0 #000,
+    0 0 25px rgba(122,46,142,0.7);
+}
 
-    h1 {
-      font-size: 2.4rem;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      margin-bottom: 2rem;
-      color: #7A2E8E;
-      text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000,
-         0 0 25px rgba(122,46,142,0.7);
-    }
+p{
+  font-size:1.6rem;
+  line-height:1.9;
+  margin-bottom:1.4rem;
+  color:#D6A8F1;
+  text-shadow:
+   -2px -2px 0 #000,
+    2px -2px 0 #000,
+   -2px  2px 0 #000,
+    2px  2px 0 #000,
+    0 0 18px rgba(0,0,0,0.9);
+}
 
-    p {
-      font-size: 1.6rem;
-      line-height: 1.9;
-      margin-bottom: 1.4rem;
-      color: #D6A8F1;
-      text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000,
-         0 0 18px rgba(0,0,0,0.9);
-    }
+/* Magenta links */
+a{color:#FF3EFF;text-decoration:none;}
+a:hover{color:#FF7CFF;text-decoration:underline;}
 
-    a {
-      color: #FFD700;
-      text-decoration: none;
-      text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000;
-    }
+.back{
+  display:inline-block;
+  margin-top:1.5rem;
+  padding:10px 16px;
+  border-radius:8px;
+  border:1px solid rgba(255,62,255,0.7);
+  color:#FF3EFF;
+  text-decoration:none;
+}
+.back:hover{
+  background:rgba(255,62,255,0.3);
+  border-color:#FF7CFF;
+  color:white;
+}
 
-    a:hover {
-      color: white;
-      text-decoration: underline;
-    }
-
-    .back {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 10px 16px;
-      border-radius: 8px;
-      border: 1px solid rgba(255,255,255,0.6);
-      color: #FFD700;
-      text-decoration: none;
-      text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000;
-    }
-
-    .back:hover {
-      background: #7A2E8E;
-      border-color: #7A2E8E;
-      color: white;
-    }
-
-    @media(max-width: 600px) {
-      h1 { font-size: 1.9rem; }
-      p { font-size: 1.2rem; }
-    }
-  </style>
+@media(max-width:600px){
+ h1{font-size:1.9rem;}
+ p{font-size:1.2rem;}
+}
+</style>
 </head>
 
 <body>
@@ -122,28 +97,30 @@
 
 <div class="content">
 
-  <h1>SunDarknessShine</h1>
+<h1>Sundarknessshine</h1>
 
-  <p>すべての作品は一点ずつ制作されるオーダーメイドであり、世界に一つだけのオリジナルモデルです。作者は自身の作品の掲載・公開に関する権利を保持しています。</p>
+<p>すべての作品は個別に制作され、世界に一つだけのオリジナル作品です。作者は作品公開の権利を保持します。</p>
 
-  <p>デザインは半永久的で、洗濯しても色落ちせず、ひび割れず、退色しません。衣類として通常の洗濯機洗いが可能です（一般的なお手入れ表示に従ってください）。</p>
+<p>イメージは永久的で、洗濯しても色落ち・ひび割れ・退色しません。衣類は洗濯機で洗えます。</p>
 
-  <p>制作期間の目安は、オーダーの混雑状況にもよりますが、通常2〜5日ほどです。</p>
+<p>通常の制作期間は、注文の混雑状況によりますが 2〜5 日です。</p>
 
-  <p>
-    もし
-    <a href="gallery_jp.html">ギャラリー</a>
-    に掲載されているモデルを気に入っていただけた場合は、
-    その作品を購入することも、
-    テーマに合わせたカスタムオーダーを依頼することも可能です。
-    ご希望の方は、
-    <a href="contact_jp.html">コンタクト</a>
-    よりアーティストまでご連絡ください。
-  </p>
+<p>
+もし
+<a href="gallery_jp.html">ギャラリー</a>
+の作品が気に入りましたら、
+展示作品の購入やオーダー制作も可能です。
+詳細は
+<a href="contact_jp.html">コンタクト</a>
+よりご連絡ください。
+</p>
 
-  <p>オリジナルペイント入り作品の目安価格は、地域やデザインの複雑さにより異なりますが、おおよそ50,000円または500ユーロからとなります。</p>
+<p>
+目安価格：20,000&nbsp;¥ 〜 — 絵画、30,000&nbsp;¥ 〜 — 衣類  
+（または 200&nbsp;€ / 300&nbsp;€、地域と内容により変動）
+</p>
 
-  <a href="index_jp.html" class="back">← トップページに戻る</a>
+<a href="index_jp.html" class="back">← ホームへ戻る</a>
 
 </div>
 
