--- a/index.html
+++ b/index.html
@@ -5,126 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SunDarknessShine – Official Art Site</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Segoe UI", sans-serif;
+    *{margin:0;padding:0;box-sizing:border-box;font-family:"Segoe UI",sans-serif;}
+
+    body{
+      background:url("background.jpg") no-repeat center center fixed;
+      background-size:cover;
+      min-height:100vh;
+      color:#fff;
+      display:flex;
+      flex-direction:column;
+      justify-content:flex-end;
+      align-items:center;
+      position:relative;
+      padding-bottom:10vh;
+      overflow-x:hidden;
     }
 
-    body {
-      /* На десктопе – фиксированный фон, центр, cover */
-      background: url("background.jpg") no-repeat center center fixed;
-      background-size: cover;
-
-      min-height: 100vh;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: center;
-      position: relative;
-      padding-bottom: 10vh;
-      overflow-x: hidden; /* НЕ скрываем вертикаль! */
+    .content{
+      position:relative;
+      z-index:1;
+      text-align:center;
+      padding:1rem;
     }
 
-    /* Без затемняющего body::before – фон чистый */
-
-    .content {
-      position: relative;
-      z-index: 1;
-      text-align: center;
-      padding: 1rem;
+    .avatar-wrapper{
+      width:190px;
+      height:190px;
+      margin:0 auto 1.5rem;
+      position:relative;
     }
 
-    h1 {
-      font-size: 3.2rem;
-      margin-bottom: 0.5rem;
-      letter-spacing: 2px;
-      color: #7A2E8E;
-      text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000,
-         0 0 25px rgba(122,46,142,0.6);
-      font-style: normal;
+    .avatar-wrapper img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      border-radius:50%;
+      border:4px solid #7A2E8E;
+      box-shadow:0 0 25px rgba(0,0,0,0.9),0 0 30px rgba(122,46,142,0.7);
+      transition:opacity .4s ease,transform .4s ease;
+      cursor:pointer;
     }
 
-    p {
-      font-size: 1.4rem;
-      margin-bottom: 2rem;
-      color: #000;
-      font-style: italic;
-      text-shadow: none;
+    h1{
+      font-size:3.2rem;
+      margin-bottom:.5rem;
+      letter-spacing:2px;
+      color:#7A2E8E;
+      text-shadow:-2px -2px 0 #000,2px -2px 0 #000,-2px 2px 0 #000,2px 2px 0 #000,0 0 25px rgba(122,46,142,0.6);
     }
 
-    .buttons {
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-      justify-content: center;
+    /* НОВЫЙ стиль — как у h1 */
+    p{
+      font-size:1.4rem;
+      margin-bottom:2rem;
+      color:#7A2E8E;
+      font-style:normal;
+      text-shadow:-2px -2px 0 #000,2px -2px 0 #000,-2px 2px 0 #000,2px 2px 0 #000,0 0 25px rgba(122,46,142,0.6);
     }
 
-    .btn {
-      padding: 0.7rem 1.4rem;
-      border: 1px solid #000;
-      border-radius: 25px;
-      color: #D6A8F1;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      background: rgba(0, 0, 0, 0.4);
+    .buttons{display:flex;gap:1rem;flex-wrap:wrap;justify-content:center;}
+
+    .btn{
+      padding:.7rem 1.4rem;
+      border:1px solid #000;
+      border-radius:25px;
+      color:#D6A8F1;
+      text-decoration:none;
+      transition:.3s;
+      background:rgba(0,0,0,0.4);
     }
 
-    .btn:hover {
-      background: #7A2E8E;
-      color: #fff;
-      border-color: #7A2E8E;
+    .btn:hover{background:#7A2E8E;color:#fff;border-color:#7A2E8E;}
+
+    .lang-switch{
+      position:absolute;top:1.5rem;right:1.5rem;display:flex;gap:.5rem;z-index:2;
     }
 
-    .lang-switch {
-      position: absolute;
-      top: 1.5rem;
-      right: 1.5rem;
-      display: flex;
-      gap: 0.5rem;
-      z-index: 2;
+    .lang-switch button{
+      background:rgba(255,255,255,0.1);
+      border:1px solid #ccc;
+      color:#fff;
+      border-radius:5px;
+      padding:.3rem .6rem;
+      cursor:pointer;
+      transition:.3s;
     }
 
-    .lang-switch button {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid #ccc;
-      color: #fff;
-      border-radius: 5px;
-      padding: 0.3rem 0.6rem;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
+    .lang-switch button:hover{background:rgba(255,255,255,0.3);}
+    footer{position:absolute;bottom:1rem;font-size:.9rem;color:#ccc;z-index:1;}
 
-    .lang-switch button:hover {
-      background: rgba(255,255,255,0.3);
-    }
-
-    footer {
-      position: absolute;
-      bottom: 1rem;
-      font-size: 0.9rem;
-      color: #ccc;
-      z-index: 1;
-    }
-
-    /* На мобильных отключаем fixed-фон и чуть сдвигаем вверх,
-       чтобы картинка не казалась обрезанной странно */
-    @media (max-width: 768px) {
-      body {
-        background-attachment: scroll;
-        background-position: center top;
-        padding-bottom: 8vh;
-      }
-
-      h1 { font-size: 2rem; }
-      p  { font-size: 1.1rem; }
-      .btn { padding: 0.5rem 1rem; }
+    @media(max-width:768px){
+      body{background-attachment:scroll;background-position:center top;padding-bottom:8vh;}
+      h1{font-size:2rem;}
+      p{font-size:1.1rem;}
+      .avatar-wrapper{width:150px;height:150px;}
     }
   </style>
 </head>
@@ -135,6 +109,10 @@
   </div>
 
   <div class="content">
+    <div class="avatar-wrapper">
+      <img id="artistAvatar" src="artist_photo.jpg" alt="Artist portrait">
+    </div>
+
     <h1>SunDarknessShine</h1>
     <p>The official website of the artist</p>
 
@@ -146,5 +124,23 @@
   </div>
 
   <footer>© 2025 SunDarknessShine</footer>
+
+<script>
+const avatar=document.getElementById("artistAvatar");
+const photos=["artist_photo.jpg","artist_avatar.jpg"];
+let current=0;
+function switchAvatar(){
+  current=(current+1)%photos.length;
+  avatar.style.opacity=0;
+  avatar.style.transform="scale(0.97)";
+  setTimeout(()=>{
+    avatar.src=photos[current];
+    avatar.style.opacity=1;
+    avatar.style.transform="scale(1)";
+  },200);
+}
+setInterval(switchAvatar,2000);
+avatar.addEventListener("click",switchAvatar);
+</script>
 </body>
 </html>
