--- a/contact.html
+++ b/contact.html
@@ -1,153 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact – SunDarknessShine</title>
-  <style>
-    :root{
-      --bg:#000;
-      --text:#fff;
-      --muted:#aaa;
-      --gap:12px;
-      --card-radius:10px;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:"Segoe UI",sans-serif;
-      background:var(--bg);
-      color:var(--text);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      padding:24px 12px 48px;
-      min-height:100vh;
-    }
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Contact – SunDarknessShine</title>
+<style>
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:"Segoe UI",sans-serif;
+  background:#000 url("background.jpg") no-repeat center center fixed;
+  background-size:cover;
+  color:#fff;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  padding:24px 12px 48px;
+  min-height:100vh;
+}
 
-    h1{
-      margin:8px 0 20px;
-      letter-spacing:2px;
-      text-transform:uppercase;
-      font-size:1.25rem;
-    }
+/* LANGUAGE BUTTONS */
+.lang-switch{
+  position:absolute;
+  top:1.5rem;
+  right:1.5rem;
+  display:flex;
+  gap:.5rem;
+  z-index:2;
+}
+.lang-switch button{
+  background:rgba(255,255,255,0.1);
+  border:1px solid #ccc;
+  color:#fff;
+  border-radius:5px;
+  padding:.3rem .6rem;
+  cursor:pointer;
+  transition:.3s;
+}
+.lang-switch button:hover{background:rgba(255,255,255,.3)}
 
-    .grid{
-      width:100%;
-      max-width:980px;
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
-      gap:var(--gap);
-      align-items:start;
-    }
+/* TITLE STYLE like Sundarknessshine */
+h1{
+  margin:8px 0 22px;
+  letter-spacing:2px;
+  text-transform:uppercase;
+  font-size:1.4rem;
+  color:#7A2E8E;
+  text-shadow:
+    -2px -2px 0 #000,
+     2px -2px 0 #000,
+    -2px  2px 0 #000,
+     2px  2px 0 #000,
+     0 0 25px rgba(122,46,142,0.7);
+}
 
-    .card{
-      background:rgba(255,255,255,0.03);
-      border-radius:var(--card-radius);
-      padding:12px;
-      display:flex;
-      flex-direction:column; /* изображение сверху, ссылка снизу */
-      align-items:center;
-      text-align:center;
-      transition:transform .18s ease, box-shadow .18s ease;
-    }
-    .card:hover{ transform:translateY(-6px); box-shadow:0 10px 30px rgba(0,0,0,.6); }
+/* GRID */
+.grid{
+  width:100%;
+  max-width:980px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
+  gap:12px;
+}
 
-    .card img{
-      width:100%;
-      height:220px;
-      object-fit:contain; /* сохраняет пропорции штрихкода */
-      border-radius:6px;
-      background:rgba(255,255,255,0.02);
-      display:block;
-    }
+/* CARD */
+.card{
+  background:rgba(0,0,0,.55);
+  border-radius:10px;
+  padding:12px;
+  text-align:center;
+  transition:.18s;
+}
+.card:hover{
+  transform:translateY(-6px);
+  box-shadow:0 10px 30px rgba(0,0,0,.7);
+}
 
-    /* контейнер для ссылки прямо под картинкой */
-    .card .link {
-      margin-top:10px;
-      font-size:0.95rem;
-      color:var(--muted);
-      text-decoration:none;
-      border:1px solid rgba(255,255,255,0.06);
-      padding:8px 10px;
-      border-radius:8px;
-      background:rgba(255,255,255,0.02);
-      width:100%;
-      display:inline-block;
-      box-shadow: none;
-      transition: background .15s, color .15s, border-color .15s;
-      overflow:hidden;
-      text-overflow:ellipsis;
-      white-space:nowrap;
-    }
+/* QR */
+.card img{
+  width:100%;
+  height:220px;
+  object-fit:contain;
+  border-radius:6px;
+  background:rgba(255,255,255,0.04);
+}
 
-    .card .link:hover{
-      color:#111;
-      background:#FFD700; /* золотой при наведении */
-      border-color:#FFD700;
-    }
+/* LINK - MAGENTA */
+.card .link{
+  margin-top:10px;
+  display:inline-block;
+  width:100%;
+  padding:8px 10px;
+  border-radius:8px;
+  text-decoration:none;
+  color:#FF3EFF;
+  border:1px solid rgba(255,62,255,.6);
+  background:rgba(0,0,0,.4);
+  transition:.2s;
+  white-space:nowrap;
+}
+.card .link:hover{
+  background:rgba(255,62,255,.3);
+  color:#fff;
+  border-color:#FF7CFF;
+}
 
-    /* иконка стрелки справа в ссылке (необязательно) */
-    .link::after{
-      content:" ↗";
-      float:right;
-      opacity:0.9;
-    }
+/* Back */
+.back{
+  margin-top:22px;
+  color:#FF3EFF;
+  text-decoration:none;
+  border:1px solid rgba(255,62,255,.6);
+  padding:8px 12px;
+  border-radius:8px;
+}
+.back:hover{
+  background:rgba(255,62,255,.3);
+  border-color:#FF7CFF;
+  color:#fff;
+}
 
-    /* back button */
-    .back{
-      margin-top:20px;
-      color:var(--muted);
-      text-decoration:none;
-      border:1px solid rgba(255,255,255,0.06);
-      padding:8px 12px;
-      border-radius:8px;
-    }
-    .back:hover{ color:#fff; border-color:#fff; }
-
-    @media (max-width:420px){
-      .card img{ height:160px; }
-      .card .link{ font-size:0.9rem; padding:8px; }
-    }
-  </style>
+@media(max-width:420px){
+  .card img{height:160px;}
+}
+</style>
 </head>
 <body>
-  <h1>Contacts</h1>
 
-  <div class="grid">
-    <!-- Instagram -->
-    <div class="card">
-      <a class="link" href="https://www.instagram.com/7sunshine8?utm_source=qr&igsh=bDI1dHkwenJtcDY5" target="_blank" rel="noopener noreferrer">
-        Instagram: @7sunshine8
-      </a>
-      <a href="https://www.instagram.com/7sunshine8?utm_source=qr&igsh=bDI1dHkwenJtcDY5" target="_blank" rel="noopener noreferrer" aria-label="Open Instagram">
-        <img src="instagram.jpg" alt="Instagram QR / barcode">
-      </a>
-    </div>
+<div class="lang-switch">
+  <button onclick="location.href='contact_ru.html'">RU</button>
+  <button onclick="location.href='contact_jp.html'">JP</button>
+</div>
 
-    <!-- LINE -->
-    <div class="card">
-      <a class="link" href="https://line.me/ti/p/Z98vMmhwl-" target="_blank" rel="noopener noreferrer">
-        LINE: open
-      </a>
-      <a href="https://line.me/ti/p/Z98vMmhwl-" target="_blank" rel="noopener noreferrer" aria-label="Open Line">
-        <img src="line.jpg" alt="LINE QR / barcode">
-      </a>
-    </div>
+<h1>Contacts</h1>
 
-    <!-- WhatsApp -->
-    <div class="card">
-      <a class="link" href="https://wa.me/qr/GIOBZKEOQOSPC1" target="_blank" rel="noopener noreferrer">
-        WhatsApp: open chat
-      </a>
-      <a href="https://wa.me/qr/GIOBZKEOQOSPC1" target="_blank" rel="noopener noreferrer" aria-label="Open WhatsApp">
-        <img src="watsapp.jpg" alt="WhatsApp QR / barcode">
-      </a>
-    </div>
+<div class="grid">
+  <div class="card">
+    <a class="link" href="https://www.instagram.com/7sunshine8" target="_blank">Instagram: @7sunshine8</a>
+    <a href="https://www.instagram.com/7sunshine8" target="_blank">
+      <img src="instagram.jpg">
+    </a>
   </div>
 
-  <a href="index.html" class="back">← Back to main</a>
+  <div class="card">
+    <a class="link" href="https://line.me/ti/p/Z98vMmhwl-" target="_blank">LINE: open chat</a>
+    <a href="https://line.me/ti/p/Z98vMmhwl-" target="_blank">
+      <img src="line.jpg">
+    </a>
+  </div>
+
+  <div class="card">
+    <a class="link" href="https://wa.me/qr/GIOBZKEOQOSPC1" target="_blank">WhatsApp: open chat</a>
+    <a href="https://wa.me/qr/GIOBZKEOQOSPC1" target="_blank">
+      <img src="watsapp.jpg">
+    </a>
+  </div>
+</div>
+
+<a href="index.html" class="back">← Back to main</a>
 </body>
 </html>
