--- a/index_ru.html
+++ b/index_ru.html
@@ -12,7 +12,7 @@
   font-family:"Segoe UI",sans-serif;
 }
 body{
-  background:url("background.jpg") no-repeat center center fixed;
+  background:#000 url("background.jpg") no-repeat center center fixed;
   background-size:cover;
   min-height:100vh;
   color:#fff;
@@ -122,6 +122,9 @@ footer{
   body{
     background-attachment:scroll;
     background-position:center top;
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-color:#000;
     padding-bottom:8vh;
   }
   h1{font-size:2rem;}
@@ -172,7 +175,6 @@ function switchAvatar(){
     avatar.style.transform = "scale(1)";
   },200);
 }
-
 setInterval(switchAvatar,2000);
 avatar.addEventListener("click",switchAvatar);
 </script>
