--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
       font-size:1.4rem;
       margin-bottom:2rem;
       color:#7A2E8E;
-      font-style:normal;
       text-shadow:
         -2px -2px 0 #000,
          2px -2px 0 #000,
@@ -135,9 +134,8 @@
 
     @media(max-width:768px){
       body{
-        /* Главное изменение: логотип целиком по ширине */
         background-attachment:scroll;
-        background-position:center top;
+        background-position:center 20%;
         background-size:contain;
         background-repeat:no-repeat;
         background-color:#000;
