--- a/index_jp.html
+++ b/index_jp.html
@@ -5,12 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SunDarknessShine – アーティスト公式サイト</title>
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:"Segoe UI",sans-serif;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Segoe UI",sans-serif;}
 body{
   background:#000 url("background.jpg") no-repeat center center fixed;
   background-size:cover;
@@ -24,103 +19,39 @@ body{
   padding-bottom:10vh;
   overflow-x:hidden;
 }
-.content{
-  position:relative;
-  z-index:1;
-  text-align:center;
-  padding:1rem;
-}
-.avatar-wrapper{
-  width:190px;
-  height:190px;
-  margin:0 auto 1.5rem;
-  position:relative;
-}
+.content{position:relative;z-index:1;text-align:center;padding:1rem;}
+.avatar-wrapper{width:190px;height:190px;margin:0 auto 1.5rem;position:relative;}
 .avatar-wrapper img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  border-radius:50%;
+  width:100%;height:100%;object-fit:cover;border-radius:50%;
   border:4px solid #7A2E8E;
-  box-shadow:0 0 25px rgba(0,0,0,0.9),
-             0 0 30px rgba(122,46,142,0.7);
-  transition:opacity .4s ease,transform .4s ease;
-  cursor:pointer;
+  box-shadow:0 0 25px rgba(0,0,0,0.9),0 0 30px rgba(122,46,142,0.7);
+  transition:opacity .4s ease,transform .4s ease;cursor:pointer;
 }
 h1{
-  font-size:3.2rem;
-  margin-bottom:.5rem;
-  color:#7A2E8E;
-  text-shadow:
-    -2px -2px 0 #000,
-     2px -2px 0 #000,
-    -2px  2px 0 #000,
-     2px  2px 0 #000,
-     0 0 25px rgba(122,46,142,0.6);
+  font-size:3.2rem;margin-bottom:.5rem;color:#7A2E8E;
+  text-shadow:-2px -2px 0 #000,2px -2px 0 #000,-2px 2px 0 #000,2px 2px 0 #000,0 0 25px rgba(122,46,142,0.6);
 }
 p{
-  font-size:1.4rem;
-  margin-bottom:2rem;
-  color:#7A2E8E;
-  text-shadow:
-    -2px -2px 0 #000,
-     2px -2px 0 #000,
-    -2px  2px 0 #000,
-     2px  2px 0 #000,
-     0 0 25px rgba(122,46,142,0.6);
+  font-size:1.4rem;margin-bottom:2rem;color:#7A2E8E;
+  text-shadow:-2px -2px 0 #000,2px -2px 0 #000,-2px 2px 0 #000,2px 2px 0 #000,0 0 25px rgba(122,46,142,0.6);
 }
-.buttons{
-  display:flex;
-  gap:1rem;
-  flex-wrap:wrap;
-  justify-content:center;
-}
+.buttons{display:flex;gap:1rem;flex-wrap:wrap;justify-content:center;}
 .btn{
-  padding:.7rem 1.4rem;
-  border:1px solid #000;
-  border-radius:25px;
-  color:#D6A8F1;
-  text-decoration:none;
-  background:rgba(0,0,0,.4);
-  transition:.3s;
+  padding:.7rem 1.4rem;border:1px solid #000;border-radius:25px;
+  color:#D6A8F1;text-decoration:none;background:rgba(0,0,0,.4);transition:.3s;
 }
-.btn:hover{
-  background:#7A2E8E;
-  color:#fff;
-  border-color:#7A2E8E;
-}
-.lang-switch{
-  position:absolute;
-  top:1.5rem;
-  right:1.5rem;
-  display:flex;
-  gap:.5rem;
-  z-index:2;
-}
+.btn:hover{background:#7A2E8E;color:#fff;border-color:#7A2E8E;}
+.lang-switch{position:absolute;top:1.5rem;right:1.5rem;display:flex;gap:.5rem;z-index:2;}
 .lang-switch button{
-  background:rgba(255,255,255,0.1);
-  border:1px solid #ccc;
-  color:#fff;
-  border-radius:5px;
-  padding:.3rem .6rem;
-  cursor:pointer;
-  transition:.3s;
-  font-size:.9rem;
+  background:rgba(255,255,255,0.1);border:1px solid #ccc;color:#fff;border-radius:5px;
+  padding:.3rem .6rem;cursor:pointer;transition:.3s;font-size:.9rem;
 }
-.lang-switch button:hover{
-  background:rgba(255,255,255,0.3);
-}
-footer{
-  position:absolute;
-  bottom:1rem;
-  color:#ccc;
-  font-size:.9rem;
-  z-index:1;
-}
+.lang-switch button:hover{background:rgba(255,255,255,0.3);}
+footer{position:absolute;bottom:1rem;color:#ccc;font-size:.9rem;z-index:1;}
 @media(max-width:768px){
   body{
     background-attachment:scroll;
-    background-position:center top;
+    background-position:center 20%;
     background-size:contain;
     background-repeat:no-repeat;
     background-color:#000;
@@ -128,10 +59,7 @@ footer{
   }
   h1{font-size:2rem;}
   p{font-size:1.1rem;}
-  .avatar-wrapper{
-    width:150px;
-    height:150px;
-  }
+  .avatar-wrapper{width:150px;height:150px;}
 }
 </style>
 </head>
@@ -144,7 +72,7 @@ footer{
 
 <div class="content">
   <div class="avatar-wrapper">
-    <img id="artistAvatar" src="artist_photo.jpg" alt="Artist portrait">
+    <img id="artistAvatar" src="artist_photo.jpg">
   </div>
 
   <h1>SunDarknessShine</h1>
@@ -160,19 +88,12 @@ footer{
 <footer>© 2025 SunDarknessShine</footer>
 
 <script>
-const avatar = document.getElementById("artistAvatar");
-const photos = ["artist_photo.jpg","artist_avatar.jpg"];
-let current = 0;
-function switchAvatar(){
-  current = (current + 1) % photos.length;
-  avatar.style.opacity = 0;
-  avatar.style.transform = "scale(0.97)";
-  setTimeout(()=>{
-    avatar.src = photos[current];
-    avatar.style.opacity = 1;
-    avatar.style.transform = "scale(1)";
-  },200);
-}
+const avatar=document.getElementById("artistAvatar");
+const photos=["artist_photo.jpg","artist_avatar.jpg"];
+let current=0;
+function switchAvatar(){current=(current+1)%photos.length;avatar.style.opacity=0;
+avatar.style.transform="scale(0.97)";
+setTimeout(()=>{avatar.src=photos[current];avatar.style.opacity=1;avatar.style.transform="scale(1)";},200);}
 setInterval(switchAvatar,2000);
 avatar.addEventListener("click",switchAvatar);
 </script>
